Change how IE support works and fix
- previously we were compiling a complete copy of the application stylesheet and including it specifically for each of IE6, 7 and 8
- changed to all browsers receive the application stylesheet and IE6, 7 and 8 now compile additional stylesheets that only include the changed styles for those browsers, so instead of compiling 4 800KB stylesheets we compile 1 800KB one and three tiny ones
- include in these new stylesheets some rules to allow the homepage to not look completely horrible in < IE8, we don't officially support these browsers but the effort required to support them is now far reduced
- also remove all the ie variables as not used in this new model

--- a/app/assets/stylesheets/application-ie7.scss
+++ b/app/assets/stylesheets/application-ie7.scss
@@ -1,6 +1,31 @@
-// BASE STYLESHEET FOR IE 7 COMPILER
+.govuk-width-container {
+  max-width: 960px;
+  margin: 0 auto;
+}
 
-$is-ie: true;
-$ie-version: 7;
+.govuk-grid-row {
+  margin: 0;
+  clear: both;
+}
 
-@import "application.scss";
+.govuk-grid-column-one-third {
+  float: left;
+  width: 32%;
+  padding: 0;
+}
+
+.govuk-grid-column-two-thirds {
+  float: left;
+  width: 60%;
+  padding: 0;
+}
+
+.home-top__links {
+  position: absolute;
+  bottom: 0;
+  right: -15px;
+  box-sizing: border-box;
+  padding: 15px 20px 25px 20px;
+  width: 30%;
+  background: black;
+}
